--- a/labs/lab03/presentation/presentation.html
+++ b/labs/lab03/presentation/presentation.html
@@ -453,7 +453,7 @@ background-color: var(--r-background-color);
 
 <section id="title-slide">
   <h1 class="title">Операционные системы</h1>
-  <p class="subtitle">Первоначальна настройка git</p>
+  <p class="subtitle">Markdown</p>
   <p class="author">Имад Акрур</p>
   <p class="institute">Российский университет дружбы народов, Москва,
 Россия</p>
